Adding Authorization and roles
